--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@adiwajshing/baileys",
-  "version": "4.0.1",
-  "description": "WhatsApp API",
-  "homepage": "https://github.com/adiwajshing/Baileys",
+  "name": "baileys",
+  "version": "6.0.8",
+  "description": "Baileys Fixed",
+  "homepage": "https://github.com/amiruldev20/Baileys",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "keywords": [
@@ -14,7 +14,9 @@
     "whatsapp-chat",
     "whatsapp-group",
     "automation",
-    "multi-device"
+    "multi-device",
+    "Amirul Dev",
+    "Baileys"
   ],
   "scripts": {
     "test": "jest",
@@ -23,33 +25,32 @@
     "build:docs": "typedoc",
     "build:tsc": "tsc",
     "example": "node --inspect -r ts-node/register Example/example.ts",
-    "example:legacy": "node --inspect -r ts-node/register Example/example-legacy.ts",
-    "gen-protobuf": "sh WAProto/GenerateStatics.sh",
-    "browser-decode": "yarn ts-node src/BrowserMessageDecoding.ts",
-    "lint": "eslint ./src --ext .js,.ts,.jsx,.tsx",
-    "lint:fix": "eslint ./src --fix --ext .js,.ts,.jsx,.tsx"
+    "gen:protobuf": "sh WAProto/GenerateStatics.sh",
+    "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
+    "lint:fix": "eslint . --fix --ext .js,.ts,.jsx,.tsx"
   },
-  "author": "Adhiraj Singh",
+  "author": "Amirul Dev",
   "license": "MIT",
   "repository": {
-    "url": "git@github.com:adiwajshing/baileys.git"
+    "url": "git+ssh://git@github.com/amiruldev20/baileys.git"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.3",
-    "axios": "^0.24.0",
-    "curve25519-js": "^0.0.4",
-    "libsignal": "git+https://github.com/adiwajshing/libsignal-node",
-    "music-metadata": "^7.4.1",
+    "axios": "^1.3.3",
+    "futoin-hkdf": "^1.5.1",
+    "libsignal": "git+https://github.com/amiruldev20/signal.git",
+    "music-metadata": "^7.12.3",
     "node-cache": "^5.1.2",
     "pino": "^7.0.0",
-    "protobufjs": "^6.10.1",
+    "protobufjs": "^6.11.3",
     "ws": "^8.0.0"
   },
   "peerDependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
     "jimp": "^0.16.1",
+    "link-preview-js": "^3.0.0",
     "qrcode-terminal": "^0.12.0",
-    "sharp": "^0.29.3"
+    "sharp": "^0.30.5"
   },
   "peerDependenciesMeta": {
     "@adiwajshing/keyed-db": {
@@ -63,31 +64,39 @@
     },
     "sharp": {
       "optional": true
+    },
+    "link-preview-js": {
+      "optional": true
     }
   },
   "files": [
     "lib/*",
     "WAProto/*",
-    "WASignalGroup/*.js",
-    "WABinary/*.js"
+    "WASignalGroup/*.js"
   ],
   "devDependencies": {
-    "@adiwajshing/eslint-config": "git+https://github.com/adiwajshing/eslint-config",
+    "@adiwajshing/eslint-config": "git+https://github.com/adiwajshing/eslint-config.git",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@types/got": "^9.6.11",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^14.6.2",
-    "@types/pino": "^7.0.0",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^16.0.0",
     "@types/sharp": "^0.29.4",
     "@types/ws": "^8.0.0",
-    "eslint": "^7.0.0",
+    "eslint": "^8.0.0",
     "jest": "^27.0.6",
     "jimp": "^0.16.1",
+    "link-preview-js": "^3.0.0",
     "qrcode-terminal": "^0.12.0",
-    "sharp": "^0.29.3",
+    "sharp": "^0.30.5",
     "ts-jest": "^27.0.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.8.1",
     "typedoc": "^0.22.0",
     "typescript": "^4.0.0"
+  },
+  "bugs": {
+    "url": "https://github.com/amiruldev20/baileys/issues"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
