--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "baileys",
-  "version": "6.0.8",
-  "description": "Baileys Fixed",
+  "name": "jetpack",
+  "version": "1.0.1",
+  "description": "Baileys Modified & Fixed",
   "homepage": "https://github.com/amiruldev20/Baileys",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
